--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "appcenter": "2.6.0",
     "appcenter-analytics": "2.6.0",
     "appcenter-crashes": "2.6.0",
-    "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.1.tar.gz",
@@ -34,7 +33,8 @@
     "undefined": "."
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "expo": "^33.0.7"
   },
   "private": true
 }
